*) 2018/05/07 - release of libxc-4.1.0
*) 2018/05/04 - release of libxc-4.0.5
*) 2018/01/17 - release of libxc-4.0.4
*) 2017/11/20 - release of libxc-4.0.3
*) 2017/11/20 - release of libxc-3.0.1
*) 2017/11/03 - release of libxc-4.0.2
*) 2017/09/28 - release of libxc-4.0.1
*) 2017/09/24 - release of libxc-4.0.0
*) 2017/06/07 - migration from svn to git
*) 2016/04/21 - release of libxc-3.0.0
*) 2016/04/21 - release of libxc-2.2.3
*) 2016/04/21 - release of libxc-2.1.3
*) 2015/02/19 - release of libxc-2.2.2
*) 2015/02/19 - release of libxc-2.1.2
*) 2014/10/30 - release of libxc-2.2.1
*) 2014/10/30 - release of libxc-2.1.1
*) 2014/03/21 - release of libxc-2.2.0
*) 2014/03/21 - release of libxc-2.1.0
*) 2014/02/18 - release of libxc-2.0.3
*) 2013/07/10 - release of libxc-2.0.2
*) 2013/01/21 - release of libxc-2.0.1
*) 2012/11/28 - release of libxc-2.0.0
*) 2011/05/12 - release of libxc-1.1
*) 2010/07/09 - release of libxc-1.0
*) 2009/03/31 - release of libxc-1.0-alpha