@@ -5,6 +5,7 @@ Dependencies:
   None
 
 New releases:
+ 2018/05/09 Version 4.1.1
  2018/05/07 Version 4.1.0
  2018/05/04 Version 4.0.5
  2018/01/17 Version 4.0.4
