@@ -1,3 +1,4 @@
+*) 2018/05/09 - release of libxc-4.1.1
 *) 2018/05/07 - release of libxc-4.1.0
 *) 2018/05/04 - release of libxc-4.0.5
 *) 2018/01/17 - release of libxc-4.0.4
